--- a/docs/source/_notebooks/openplugin_manifests_klarna.ipynb
+++ b/docs/source/_notebooks/openplugin_manifests_klarna.ipynb
@@ -1,10 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5baed63e-b32c-4622-baae-feedb7e26b69",
+   "metadata": {},
+   "source": [
+    "# Klarna Openplugin Demo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e049306f-f47d-49c3-9e4e-bf7dec737433",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
